--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="icon" href="logo.png">
+    <link rel="icon" href="/assets/logo.png">
     <title>Spotify - Web player: Music for Everyone</title>
     <link rel="stylesheet" href="finalcssproject.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -54,8 +54,8 @@
         <div class="main-content">
             <div class="sticky-nav">
                 <div class="sticky-nav-icons">
-                <img src="backward_icon.png" alt="">
-                <img src="forward_icon.png" class="hide">
+                <img src="/assets/backward_icon.png" alt="">
+                <img src="/assets/forward_icon.png" class="hide">
                 </div>
                 <div class="sticky-nav-options">
                     <button class="badge nav-items hide">Explore Premium</button>
@@ -69,7 +69,7 @@
                 <h2>Recently played</h2> <br>
                 <div class="card-container">
                     <div class="card">
-                        <img src="card1img.jpeg" class="card-img">
+                        <img src="/assets/card1img.jpeg" class="card-img">
                         <p class="card-title">Top 50 - Global</p> <br>
                         <p class="card-info">Your daily updates of the most played...</p>
                     </div>
@@ -79,37 +79,37 @@
                 <h2>Trending now near you</h2> <br>
                 <div class="card-container">
                     <div class="card">
-                        <img src="card2img.jpeg" class="card-img">
+                        <img src="/assets/card2img.jpeg" class="card-img">
                         <p class="card-title">Mahiye jinna sohna</p> <br>
                         <p class="card-info">Darshan Rawal</p>
                     </div>
                     <div class="card">
-                        <img src="card3img.jpeg" class="card-img">
+                        <img src="/assets/card3img.jpeg" class="card-img">
                         <p class="card-title">Mere pass Tum Ho</p> <br>
                         <p class="card-info">Rahat Fateh Ali Khan</p>
                     </div>
                     <div class="card">
-                        <img src="card4img.jpeg" class="card-img">
+                        <img src="/assets/card4img.jpeg" class="card-img">
                         <p class="card-title">Naa Ready (From "Leo")</p> <br>
                         <p class="card-info">Vijay, Anirudh Ravichander, Asal Kolaar</p>
                     </div>
                     <div class="card">
-                        <img src="card2img.jpeg" class="card-img">
+                        <img src="/assets/card2img.jpeg" class="card-img">
                         <p class="card-title">Mahiye jinna sohna</p> <br>
                         <p class="card-info">Darshan Rawal</p>
                     </div>
                     <div class="card">
-                        <img src="card3img.jpeg" class="card-img">
+                        <img src="/assets/card3img.jpeg" class="card-img">
                         <p class="card-title">Mere pass Tum Ho</p> <br>
                         <p class="card-info">Rahat Fateh Ali Khan</p>
                     </div>
                     <div class="card">
-                        <img src="card4img.jpeg" class="card-img">
+                        <img src="/assets/card4img.jpeg" class="card-img">
                         <p class="card-title">Naa Ready (From "Leo")</p> <br>
                         <p class="card-info">Vijay, Anirudh Ravichander, Asal Kolaar.</p>
                     </div>
                     <div class="card">
-                        <img src="card2img.jpeg" class="card-img">
+                        <img src="/assets/card2img.jpeg" class="card-img">
                         <p class="card-title">Mahiye jinna sohna</p> <br>
                         <p class="card-info"> Darshan Rawal</p>
                     </div>
@@ -120,17 +120,17 @@
                 <h2>Featured charts</h2> <br>
                 <div class="card-container">
                     <div class="card">
-                        <img src="card5img.jpeg" class="card-img">
+                        <img src="/assets/card5img.jpeg" class="card-img">
                         <p class="card-title">Top somgs - Global</p> <br>
                         <p class="card-info">Catch the most steamed tracks...</p>
                     </div>
                     <div class="card">
-                        <img src="card6img.jpeg" class="card-img">
+                        <img src="/assets/card6img.jpeg" class="card-img">
                         <p class="card-title">Top songs - India</p> <br>
                         <p class="card-info">Get the most loved tracks in india...</p>
                     </div>
                     <div class="card">
-                        <img src="card1img.jpeg" class="card-img">
+                        <img src="/assets/card1img.jpeg" class="card-img">
                         <p class="card-title">Top 50 - Global</p> <br>
                         <p class="card-info">Your daily updates of the most played...</p>
                     </div>
@@ -146,21 +146,21 @@
 
         <div class="music-player">
             <div class="album">
-                <img src="album_picture.jpeg" class="album_picture">
+                <img src="/assets/album_picture.jpeg" class="album_picture">
                 <div class="song">
                     <p class="song-name" style="opacity: 1; font-size: 1rem;">Daylight</p>
                     <p class="singer">David kushner</p>
                 </div>
-                <img src="album_icon1.png" class="album-icon">
-                <img src="album_icon2.png" class="album-icon" style="height: 2rem;">
+                <img src="/assets/album_icon1.png" class="album-icon">
+                <img src="/assets/album_icon2.png" class="album-icon" style="height: 2rem;">
             </div>
             <div class="player">
                 <div class="player-control">
-                    <img src="player_icon1.png" class="player-control-icon">
-                    <img src="player_icon2.png" class="player-control-icon">
-                    <img src="player_icon3.png" class="player-control-icon" style="opacity: 1; height: 2rem;">
-                    <img src="player_icon4.png" class="player-control-icon">
-                    <img src="player_icon5.png" class="player-control-icon">
+                    <img src="/assets/player_icon1.png" class="player-control-icon">
+                    <img src="/assets/player_icon2.png" class="player-control-icon">
+                    <img src="/assets/player_icon3.png" class="player-control-icon" style="opacity: 1; height: 2rem;">
+                    <img src="/assets/player_icon4.png" class="player-control-icon">
+                    <img src="/assets/player_icon5.png" class="player-control-icon">
                 </div>
                 <div class="playback-bar">
                     <span class="curr-time">00:00</span>
@@ -169,11 +169,11 @@
                 </div>
             </div>
             <div class="controls">
-                <img src="controls_icon1.png" class="control-icon" >
-                <img src="controls_icon2.png" class="control-icon">
-                <img src="controls_icon3.png" class="control-icon" style="height: 1rem; opacity: 0.5;">
-                <img src="controls_icon4.png" class="control-icon" style="height: 0.8rem; opacity: 0.5;">
-                <img src="controls_icon5.png" class="control-icon" style="height: 2rem;">
+                <img src="/assets/controls_icon1.png" class="control-icon" >
+                <img src="/assets/controls_icon2.png" class="control-icon">
+                <img src="/assets/controls_icon3.png" class="control-icon" style="height: 1rem; opacity: 0.5;">
+                <img src="/assets/controls_icon4.png" class="control-icon" style="height: 0.8rem; opacity: 0.5;">
+                <img src="/assets/controls_icon5.png" class="control-icon" style="height: 2rem;">
                 <div class="vol">
                     <input type="range" min="0" max="100" class="volume" step="1">
                 </div>
