--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <div class="library">
                 <div class="option">
                     <div class="lib-option nav-option " >
-                        <img src="library_icon.png" alt="lib-option">
+                        <img src="assets/library_icon.png" alt="lib-option">
                         <a href="#">Your Library</a>
                     </div>
                     <div class="icons">
